fix spacing a bit

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ body, html {
   	box-model: border-box;
   	border: 3px solid transparent;
   	background-clip: padding-box;
+  	padding: 15px;
 }
 
 .project-short-desc {
